added Google Spreadsheet instructions

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ MONGO_INITDB_DATABASE=<YOUR DB NAME>
 TELEGRAM_API_ID=<YOUR TELEGRAM API ID>
 TELEGRAM_API_HASH=<YOUR TELEGRAM API HASH>
 X11VNC_PASSWORD==<PASSWORD THAT WILL BE USING TO CONNECT TO VNC SERVER>
+SPREADSHEET_ID=<YOUR SPREADSHEET ID> [OPTIONAL]
